--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ a {
   color: aliceblue;
 }
 
+hr {
+  margin-block: 10px;
+  border-color: #fff;
+}
+
 /* CLASS */
 
 /* .dp-block-m-a h4, */
@@ -30,13 +35,6 @@ a {
   text-align: center;
 } */
 
-.my-horizon {
-  margin-block: 100px;
-  background-color: #000;
-  border-radius: 1.5rem;
-  height: 40px;
-}
-
 .middle {
   /* display: flex;
   justify-content: space-between;
@@ -47,6 +45,47 @@ a {
 
 .middle h4 {
   display: inline-block;
+}
+
+.mobile-navbar {
+  display: none;
+  /* background-color: rgb(71, 98, 121); */
+  background-color: rgb(12, 11, 11);
+  position: absolute;
+  z-index: 100;
+  height: 11rem;
+  width: 100%;
+  border-bottom-left-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+  /* opacity: 0.9; */
+  text-align: center;
+}
+
+.mobile-navbar .mobile-links {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mobile-navbar .mobile-links a {
+  font-size: 1.5rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  color: #fff;
+  text-shadow: 0 0 8px #fff;
+}
+
+.mobile-navbar .mobile-links a:nth-of-type(1) {
+  margin-top: 10px;
+}
+
+.my-horizon {
+  margin-block: 100px;
+  background-color: #000;
+  border-radius: 1.5rem;
+  height: 40px;
 }
 
 .navigation {
@@ -98,6 +137,7 @@ a {
   right: 2rem;
   color: aliceblue;
   display: none;
+  z-index: 100;
 }
 
 #menu p:active {
@@ -387,6 +427,10 @@ h6 {
 @media screen and (max-width: 575px) {
   #menu {
     top: -2rem;
+  }
+
+  #menu-links {
+    display: none;
   }
 
   #menu p {
