--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-/* GOOGLE FONTS */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Ubuntu:wght@500&display=swap");
 
 body {
   background-color: #fff;
@@ -16,6 +15,7 @@ hr {
 }
 
 /* CLASS */
+
 .calculator-png,
 .easy-png {
   padding-block: 40px;
@@ -30,9 +30,6 @@ hr {
 }
 
 .middle {
-  /* display: flex;
-  justify-content: space-between;
-  align-items: center; */
   text-align: center;
   margin-block: 100px;
 }
@@ -43,7 +40,6 @@ hr {
 
 .mobile-navbar {
   display: none;
-  /* background-color: rgb(71, 98, 121); */
   background-color: rgb(12, 11, 11);
   position: absolute;
   z-index: 100;
@@ -51,11 +47,17 @@ hr {
   width: 100%;
   border-bottom-left-radius: 4rem;
   border-bottom-right-radius: 4rem;
-  /* opacity: 0.9; */
   text-align: center;
 }
 
-.mobile-navbar a {
+.mobile-navbar .mobile-links {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mobile-navbar .mobile-links a {
   font-size: 1.5rem;
   display: block;
   margin-left: auto;
@@ -64,7 +66,7 @@ hr {
   text-shadow: 0 0 8px #fff;
 }
 
-.mobile-navbar a:nth-of-type(1) {
+.mobile-navbar .mobile-links a:nth-of-type(1) {
   margin-top: 10px;
 }
 
@@ -82,7 +84,6 @@ hr {
 }
 
 .top {
-  /* height: 100vh; */
   margin-top: 0.5rem;
   background-color: #fff;
   border-radius: 1.5rem;
@@ -108,6 +109,8 @@ hr {
 }
 
 #links {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
   position: absolute;
   top: -2.5rem;
   right: 7rem;
@@ -135,7 +138,6 @@ hr {
   position: absolute;
   display: none;
   background-color: #fff;
-  /* padding: 10px; */
   border-radius: 0.7rem;
   width: 7rem;
   text-align: center;
@@ -189,7 +191,6 @@ h6 {
 
 ::placeholder {
   text-align: right;
-  /* margin-right: 1.5rem; */
 }
 
 /* ID SELECTORS */
@@ -229,7 +230,6 @@ h6 {
 .button {
   background-color: #262626;
   font-size: 25px;
-  /* font-size: 1.6rem; */
 }
 
 .button,
@@ -247,22 +247,20 @@ h6 {
   padding: 0;
 }
 
+.buttons-row {
+  line-height: 12px;
+}
+
 .calculator {
-  /* position: absolute;
-  left: 10rem; */
   padding: 1.5rem;
   display: inline-block;
-  /* margin-left: auto;
-    margin-right: auto; */
   width: 19rem;
   height: 39rem;
   background-color: black;
   border-radius: 3rem;
-  /* margin-top: 4rem; */
   border: 6px solid;
   border-color: #b4cde6;
   text-align: center;
-  /* transform: rotate(-15deg); */
 }
 
 .calculator-container {
@@ -323,34 +321,210 @@ h6 {
   padding-right: 6rem;
 }
 
-@media (max-width: 480px) {
-  #result {
-    font-size: 3rem;
-  }
-
-  #swipe {
-    margin-top: 3.3rem;
-  }
-}
 /* END OFF CALCULATOR */
 
+/* TO DO APP */
+
+/* elements */
+
+p {
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
+
+span i {
+  margin-left: 5px;
+}
+
+h3 {
+  margin-bottom: 6rem;
+}
+
+h6 {
+  text-align: right;
+  margin-top: 8rem;
+}
+
+li {
+  list-style-type: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  cursor: pointer;
+  text-align: left;
+  border-radius: 1.5rem;
+  padding: 5px;
+  padding-left: 10px;
+  color: #fff;
+  position: relative;
+  margin-block: 3px;
+}
+
+/* Reset default ul style */
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+/* Class Names */
+
+.all-to-do {
+  text-align: center;
+}
+
+.delete-symbol {
+  /* display: inline-block; */
+  color: rgb(211, 95, 95);
+  margin-left: 1rem;
+  position: absolute;
+  top: 10px;
+  right: 5px;
+}
+
+.li-background {
+  background-image: linear-gradient(#2c1b33, #3f3941);
+}
+
+.todo {
+  height: 38rem;
+  padding-top: 3rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-image: linear-gradient(rgb(0, 0, 0), #24282e);
+  border-radius: 1.5rem;
+}
+
+.todophone {
+  padding: 1.5rem;
+  /* display: block;
+  margin-left: auto;
+  margin-right: auto; */
+  /* width: 20.6rem; */
+  width: 50.6rem;
+  height: 45rem;
+  background-color: black;
+  border-radius: 3rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  border: 6px solid;
+  border-color: #b4cde6;
+  position: static;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* ID SELECTORS */
+#clearButton,
+#sendButton {
+  margin-top: 30px;
+  border-radius: 1rem;
+  border-style: none;
+  background-color: rgb(23, 23, 23);
+  margin-left: 5px;
+  margin-bottom: 40px;
+  color: #fff;
+}
+
+#toDoAppClock {
+  margin-left: 1rem;
+}
+
+#to-do-h1 {
+  font-size: 30px;
+  margin-bottom: 30px;
+  color: #fff;
+}
+
+#to-do-input {
+  padding: 0 10px 0 10px;
+  /* margin-right: 10px; */
+  width: 500px;
+  /*  height: 50px; */
+  border-radius: 1rem;
+  border-style: none;
+  margin-top: 0;
+  outline: none;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  opacity: 0.5;
+}
+
+#to-do-i-span {
+  margin-left: 36rem;
+}
+
+#to-do-swipe {
+  background-color: #fff;
+  width: 10rem;
+  height: 0.3rem;
+  border-radius: 1.5rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.5rem;
+  cursor: pointer;
+}
+
+#to-do-swipe-completed {
+  margin-top: 5rem;
+  display: none;
+}
+
+#to-do-swipe-completed h3 {
+  color: #fff;
+}
+
+#to-do-swipe-completed a {
+  display: block;
+  margin-block: 2rem;
+  font-size: 1.5rem;
+}
+
+#todo-title-span {
+  font-size: 5rem;
+  font-weight: bold;
+  line-height: 1.5;
+  color: #000;
+}
+
+#todo-title-span span {
+  color: #d18733;
+}
+
+/* END OF TO DO APP */
+
 @media screen and (max-width: 1399px) {
+  #todo-title-span,
   .calculator-container h1 #calculator-title-span {
     font-size: 4.7rem;
+  }
+
+  .calculator-container h1 #calculator-title-span {
     right: -0.2rem;
     top: 10rem;
   }
 }
 
 @media screen and (max-width: 1199px) {
+  #todo-title-span,
   .calculator-container h1 #calculator-title-span {
     font-size: 3.5rem;
-    right: -0.2rem;
+  }
+  .calculator-container h1 #calculator-title-span {
     top: 14rem;
   }
 }
 
 @media screen and (max-width: 992px) {
+  #clearButton,
+  #sendButton {
+    margin-block: 15px;
+  }
+
   #first-img,
   #second-img {
     display: block;
@@ -361,13 +535,27 @@ h6 {
     top: -2.3rem;
     right: 2rem;
   }
-  .calculator {
+
+  #to-do-input {
+    width: 200px;
+  }
+  #to-do-i-span {
+    margin-left: 8rem;
+  }
+
+  #to-do-swipe {
+    width: 7rem;
+  }
+
+  .calculator,
+  .todophone {
     position: static;
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
 
+  #todo-title-span,
   .calculator-container h1 #calculator-title-span {
     position: static;
     font-size: 3rem;
@@ -377,6 +565,17 @@ h6 {
     position: relative;
     text-align: center;
     margin-bottom: 3rem;
+  }
+
+  .todo {
+    height: 34rem;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .todophone {
+    width: 20rem;
+    height: 41rem;
   }
 }
 
@@ -388,10 +587,6 @@ h6 {
   #menu {
     display: block;
   }
-
-  /* .dp-block-m-a {
-    display: none;
-  } */
 
   .easy-png {
     margin-right: 40px;
@@ -435,5 +630,15 @@ h6 {
   .navigation {
     margin-top: 0;
     border-radius: 0;
+  }
+
+  @media (max-width: 480px) {
+    #result {
+      font-size: 3rem;
+    }
+
+    #swipe {
+      margin-top: 3.3rem;
+    }
   }
 }
